# vidiup

./: Cargo.toml  README.md
src/: files.rs  lib.rs  main.rs  saved_file.rs  values.rs
src/api/: mod.rs
src/api/v1/: add.rs  get.rs  mod.rs  regions.rs  stats.rs
src/config/: blacklist.rs  interface.rs  master.rs  mod.rs  outbound.rs
src/pages/: add.rs  finder.rs  home.rs  mod.rs
src/storage/: instances.rs  mod.rs  polling.rs  samples.rs
static/css/: home.css
static/html/: add.html  finder.html  finder_notfound.html  home.html
static/script/: add.js
template/config/: blacklists.json  interface.json  master.json  outbound.json
template/storage/: pollingrecords.json  sampleset.json
